--- a/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/Details.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/Details.cshtml
@@ -282,6 +282,57 @@
                             }
                         </table>
 
+                        @if (Model.IT_mantenimientos_aplazamientos.Count > 0)
+                        {
+                            <div class="ln_solid"></div>
+
+                            <div class="form-group row">
+                                <span style="color:black"><b>HISTORIAL DE APLAZOS</b></span>
+                            </div>
+                            <div class="item form-group">
+
+                            </div>
+                            <table id="datatable_2" class="table datatable table-bordered table-striped" cellspacing="0" width="100%">
+                                <thead style="background-color: #009ff5; color: azure; border: #009ff5 1px solid;">
+                                    <tr>
+                                        <th width="1%">
+                                            #
+                                        </th>
+                                        <th width="15%">
+                                            Fecha Original
+                                        </th>
+                                        <th width="15%">
+                                            Nueva Fecha
+                                        </th>
+                                        <th width="50%">
+                                            Comentarios
+                                        </th>
+                                    </tr>
+                                </thead>
+                                @{int c = Model.IT_mantenimientos_aplazamientos.Count; }
+                                @foreach (var aplazamiento in Model.IT_mantenimientos_aplazamientos.OrderByDescending(x => x.id))
+                                {
+                                    <tbody style="border: #009ff5 1px solid;">
+                                        <tr style="background-color:@(c==Model.IT_mantenimientos_aplazamientos.Count?"#BBFFBB":String.Empty)">
+                                            <td>
+                                                @(c--)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(model => aplazamiento.fecha_anterior)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(model => aplazamiento.nueva_fecha)
+                                            </td>
+                                            <td>
+                                                @Html.DisplayFor(model => aplazamiento.motivo)
+                                            </td>
+                                        </tr>
+                                    </tbody>
+
+                                }
+                            </table>
+                        }
+
                         <div class="ln_solid"></div>
 
                         <div class="form-group row">
