--- a/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_matriz_requerimientos/ListadoSolicitudes.cshtml
@@ -89,7 +89,7 @@
                                                 <div class="form-group row ">
                                                     <label class="control-label col-md-1 col-sm-1" for="id_asignacion" style="text-align:right">Asignado a:</label>
                                                     <div class="col-md-3 col-sm-0">
-                                                        @Html.DropDownList("id_asignacion", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
+                                                        @Html.DropDownList("id_asignacion", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                     </div>
                                                     <div class="col-md-6 col-sm-6">
                                                     </div>
