--- a/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/PosponerMantenimiento.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/IT_mantenimientos/PosponerMantenimiento.cshtml
@@ -6,8 +6,6 @@
     ViewBag.SegundoNivel = "it_mantenimientos";
     ViewBag.ControllerName = "it_mantenimientos";
 
-    string estatus_mantenimiento = (string)ViewBag.estatus_mantenimiento;
-
     int contador = 0;
 }
 
@@ -22,9 +20,6 @@
     @Styles.Render("~/Content/dataTables_css")
     <!-- iCheck -->
     <link href="@Url.Content("~/Content/vendors/iCheck/skins/square/green.css")" rel="stylesheet">
-    <!-- SweetAlert2 -->
-    <link href="@Url.Content("~/Content/vendors/sweetalert2-theme-bootstrap-4/bootstrap-4.min.css")" rel="stylesheet">
-
 
     <style>
 
@@ -162,10 +157,11 @@
                     <!-- /.col -->
                     <div class="x_content">
 
+
                         @Html.AntiForgeryToken()
                         <div class="ln_solid"></div>
                         <div class="form-group row">
-                            <span style="color:black"><b>DATOS Generales</b></span>
+                            <span style="color:black"><b>Datos Generales</b></span>
                         </div>
                         @if (!Html.ViewData.ModelState.IsValid)
                         {
@@ -353,78 +349,47 @@
                         }
 
                         <div class="ln_solid"></div>
+
                         <div class="form-group row">
-                            <span style="color:black"><b>DOCUMENTO DE ACEPTACIÓN</b></span>
+                            <span style="color:black"><b>POSPONER MANTENIMIENTO</b></span>
                         </div>
 
-                        @using (Html.BeginForm(null, null, FormMethod.Post, new { enctype = "multipart/form-data", @class = "form-horizontal form-label-left", @id = "formulario" }))
+                        @using (Html.BeginForm(null, null, FormMethod.Post, new { }))
                         {
+
                             @Html.AntiForgeryToken()
-
                             @Html.HiddenFor(model => model.id)
-                            <input type="hidden" name="cambio_documento_soporte" id="cambio_documento" value="0" />
-                            <input type="hidden" name="estatus_mantenimiento" id="estatus_mantenimiento" value="@estatus_mantenimiento" />
+                            @Html.HiddenFor(model => model.id_empleado_sistemas)
+                            <input type="hidden" name="estatus_mantenimiento" value="@Request.Params["estatus_mantenimiento"]" />
 
-
-                            if (!Html.ViewData.ModelState.IsValid)
-                            {
-                                <div class="alert alert-danger" role="alert">
-                                    @Html.ValidationSummary("", new { @class = "text-white" })
-                                </div>
-                            }
-
-                            if (Model != null && Model.id_biblioteca_digital > 0)
-                            {
-                                <div class="form-group row" id="div_document_support_info">
-                                    @Html.LabelFor(model => model.PostedFileDocumentoAceptacion, new { @class = "control-label col-md-2" })
-                                    <div class="col-md-6">
-                                        <input type="text" class="form-control col-md-12" style="text-align: right;" value="@Model.biblioteca_digital.Nombre" readonly>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_biblioteca_digital})" class="btn btn-success btm-sm" title="Descargar">
-                                            <i class="fa fa-download"></i>
-                                        </a>
-                                        <a href="@Url.Action("DownloadFile","Combos", new { idDocumento = Model.id_biblioteca_digital, inline=true})" class="btn btn-info btm-sm" target="_blank" title="Ver">
-                                            <i class="fa-regular fa-eye"></i>
-                                        </a>
-                                        <a onclick="muestraFileInput()" class="btn btn-danger btm-sm" title="Reemplazar" style="color:white">
-                                            <i class="fa fa-close"></i>
-                                        </a>
-                                    </div>
-
-                                </div>
-                            }
-
-                            <div class="form-group row" id="div_document_support_input" style="@(Model.id_biblioteca_digital.HasValue ? "display:none" : "" )">
-                                @Html.LabelFor(model => model.id_biblioteca_digital, new { @class = "control-label col-md-2" })
-                                <div class="col-md-6">
-
-                                    <div class="input-group">
-                                        <div class="custom-file">
-                                            @Html.TextBoxFor(m => m.PostedFileDocumentoAceptacion, new { @class = "custom-file-input", type = "file", @accept = ".xls,.xlsx,.png, .jpeg, .jpg, .pdf, .doc, .docx, .rar, .zip, .eml", @required = "required" })
-                                            <label class="custom-file-label" for="PostedFileDocumentoAceptacion" style="text-align:left">Seleccione un archivo...</label>
-                                        </div>
-                                    </div>
-                                    @Html.ValidationMessageFor(m => m.PostedFileDocumentoAceptacion, "", new { @class = "text-danger" })
-                                </div>
-                                <div class="col-md-1">
-                                    <div class="input-group">
-                                        @if (Model.id_biblioteca_digital.HasValue)
-                                        {
-                                            <a onclick="ocultaFileInput()" class="btn btn-warning btm-sm" title="Deshacer" style="color:white">
-                                                <i class="fa fa-refresh"></i>
-                                            </a>
-                                        }
-                                    </div>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.nueva_fecha, new { @class = "col-form-label col-md-1 col-sm-1" })
+                                <div class="col-md-2 col-sm-2">
+                                    @Html.EditorFor(model => model.nueva_fecha, new { htmlAttributes = new { @class = "form-control", @required = "required" } })
+                                    @Html.ValidationMessageFor(model => model.nueva_fecha, "", new { @class = "text-danger" })
                                 </div>
                             </div>
 
-                            <div class="item form-group">
-                                <div class="col-md-12 col-sm-12 offset-md-12">
-                                    <button id="btn-submit" type="button" class="btn btn-success btn-lg float-right" style="display: @(Model.id_biblioteca_digital > 0 ? "none" : "block")" onclick="showDialog()"><i class="fa-regular fa-floppy-disk"></i> Guardar</button>
+                            <div class="form-group row">
+                                @Html.LabelFor(model => model.comentarios_aplazamiento, new { @class = "col-form-label col-md-2 col-sm-2" })
+                            </div>
+                            <div class="item form-group row">
+                                <div class="col-md-12 col-sm-12">
+                                    @Html.TextAreaFor(model => model.comentarios_aplazamiento, new { @class = "form-control col-md-12 col-sm-12", @rows = "5", @autocomplete = "off", @required = "required" })
+                                    @Html.ValidationMessageFor(model => model.comentarios_aplazamiento, "", new { @class = "text-danger" })
                                 </div>
+                            </div>
+
+                            <div class="ln_solid"></div>
+                            <div class="form-group row">
+
+                                <div class="col-md-12 col-sm-12">
+                                    <button type="button" id="btn-ok" class="btn btn-info btn-lg float-md-right"><i class="fa-solid fa-clock"></i> Aplazar Mantenimiento</button>
+                                </div>
+
                             </div>
                         }
+
                     </div>
                 </div>
 
@@ -442,16 +407,15 @@
 
 @section scripts
 {
-    @Scripts.Render(Url.Content("~/Content/vendors/jquery-iu/jquery-ui.min.js"))
+
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     @Scripts.Render("~/bundles/dataTables_js")
     <!-- iCheck -->
     @Scripts.Render(Url.Content("~/Content/vendors/iCheck/icheck.min.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
     @Scripts.Render("~/bundles/jqueryval")
-
-    @Scripts.Render(Url.Content("~/Content/vendors/bootstrap/site/docs/4.3/assets/js/vendor/bs-custom-file-input.min.js"))
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.3/sweetalert2.all.min.js" integrity="sha512-/iBgV43zPirSC0tue+PT/1VHGs7En24twBmT+sVMgn9PTaOpKfbgIyL5YsGKlbAIxcwz9S8W/YEnYjpIYj2Axw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="~/Scripts/Forms/ModalConfirm.js"></script>
     <script>
         $(document).ready(function () {
 
@@ -465,8 +429,6 @@
                 ActualizaDatosEmpleados($(this).val());
             });
 
-            //inicializa en input file
-            bsCustomFileInput.init()
 
             $('.radio-estatus').on('ifChanged', function (event) {
                 var row = $(this).attr("data-row");
@@ -497,66 +459,8 @@
                 increaseArea: '20%' // optional
             });
 
-             //aumenta en uso cada vez que se hace un cambio en el archivo de soporte
-            $("#@Html.IdFor(model => model.PostedFileDocumentoAceptacion)").on("change", function () {
-                document.getElementById('cambio_documento').value = ++documento_soporte_cambios;
-            });
-
         });
 
-        //variable para saber si ha cambiado el formulario y asi no se detenga por doble submit
-        var documento_soporte_cambios = 1;
-
-        function showDialog(text) {
-
-            Swal.fire({
-                title: 'Confirmación',
-                html: "La responsiva seleccionada se asociará a la asignación actual. <br>¿Desea continuar?",
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Continuar',
-                cancelButtonText: 'Cancelar'
-            }).then((result) => {
-                /* Read more about isConfirmed, isDenied below */
-
-                if (result.isConfirmed) {
-                    /*  Swal.fire('Saved!', '', 'success')*/
-                    $('#formulario').submit();
-                } else if (result.isDismissed) {
-                    /*Swal.fire('Los cambios no han sido guardados.', '', 'info')*/
-                }
-            });
-
-        }
-
-          //muestra el formulario de carga de archivo
-    function muestraFileInput() {
-
-        $("#div_document_support_info").hide('clip',150, function () {
-            $("#@Html.IdFor(model => model.PostedFileDocumentoAceptacion)").val('');
-            $('#@Html.IdFor(model => model.PostedFileDocumentoAceptacion)').next('label').html('Seleccione un archivo...');
-        });
-        $("#div_document_support_input").show('clip',400);
-
-        document.getElementById('cambio_documento').value = ++documento_soporte_cambios;
-        $("#btn-submit").show('blind', 300);
-
-    }
-
-    //oculta el formulario de carga de archivo
-    function ocultaFileInput() {
-        $("#div_document_support_info").show('clip',400, function () {
-            $("#@Html.IdFor(model => model.PostedFileDocumentoAceptacion)").val('');
-            $('#@Html.IdFor(model => model.PostedFileDocumentoAceptacion)').next('label').html('Seleccione un archivo...');
-        });
-        $("#div_document_support_input").hide('clip',150);
-
-        document.getElementById('cambio_documento').value = ++documento_soporte_cambios;
-
-        $("#btn-submit").hide('blind', 500);
-
-    }
 
         //agranda el tamaño de la barra
         window.onload = function () {
