2023-05-30 Cambio en cards de página inicio.

--- a/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Home/Index.cshtml
@@ -13,8 +13,10 @@
         .widget-style {
             height: 200px;
         }
+
        
     </style>
+    <link href="~/Content/css/index.css" rel="stylesheet" />
 }
 
 <div class="right_col" role="main">
@@ -24,97 +26,110 @@
         <div class="clearfix"></div>
 
         <div class="row">
-            <div class="col-md-12 col-sm-12 text-thyssen-color">
-                <h3>thyssenkrupp Materials de M&eacute;xico S.A de C.V.</h3>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="x_panel altura_200">
-                    <div class="x_title text-thyssen-color">
-                        <h2>Misi&oacute;n</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            @*Utilizado para mover a la derecha los iconos del card*@
-                            <span style="visibility:hidden">_______</span>
-                            <li>
-                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <div class="bs-example" data-example-id="simple-jumbotron">
-                            <p>
-                                Somos un centro de servicios especializados para acero y aluminio ofreciendo valor agregado a nuestros clientes, empleados y accionistas. <b>Creando un mundo en el cual los recursos son usados de la mejor manera, conjuntamente del &eacute;xito y de un futuro sustentable.</b>
-                            </p>
+            
+            <div class="main" >
+                <h1>thyssenkrupp Materials de M&eacute;xico S.A de C.V.</h1>
+                <ul class="cards">
+                    <li class="cards_item">
+                        <div class="card">
+                            @*<div class="card_image"></div>*@
+                            <div class="card_content">
+                                <h2 class="card_title">Misi&oacute;n</h2>
+                                <hr />
+                                <p class="card_text">
+                                    Somos un centro de servicios especializados para acero y aluminio ofreciendo valor agregado a nuestros clientes, empleados y accionistas. <b>Creando un mundo en el cual los recursos son usados de la mejor manera, conjuntamente del éxito y de un futuro sustentable</b>.
+                                </p>
+                                @*<button class="btn card_btn">Read More</button>*@
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="x_panel altura_200">
-                    <div class="x_title text-thyssen-color">
-                        <h2>Visi&oacute;n</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            @*Utilizado para mover a la derecha los iconos del card*@
-                            <span style="visibility:hidden">_______</span>
-                            <li>
-                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <div class="bs-example" data-example-id="simple-jumbotron">
-                            <p>
-                                Diversificar y crecer el portafolio de negocio para 2025, manteniendo el liderazgo como centro de servicio  a trav&eacute;s de la cadena de suministro ofreciendo a nuestros clientes de la industria automotriz y cualquier sector industrial servicios integrales, para ser la mejor opci&oacute;n en el pa&iacute;s.
-                            </p>
+                    </li>
+                    <li class="cards_item">
+                        <div class="card">
+                            @*<div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>*@
+                            <div class="card_content">
+                                <h2 class="card_title">Visi&oacute;n</h2>
+                                <hr />
+                                <p class="card_text">Diversificar y crecer el portafolio de negocio para 2025, manteniendo el liderazgo como centro de servicio a través de la cadena de suministro ofreciendo a nuestros clientes de la industria automotriz y cualquier sector industrial servicios integrales, para ser la mejor opción en el país.</p>
+                                @*<button class="btn card_btn">Read More</button>*@
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <div class="x_panel altura_200">
-                    <div class="x_title text-thyssen-color">
-                        <h2>Valores</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            @*Utilizado para mover a la derecha los iconos del card*@
-                            <span style="visibility:hidden">_______</span>
-                            <li>
-                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-
-                        </ul>
-                        <div class="clearfix"></div>
-                    </div>
-                    <div class="x_content">
-                        <div class="bs-example" data-example-id="simple-jumbotron">
-
-                            El cumplimiento de nuestras metas estrat&eacute;gicas es resultado del apego a nuestros valores corporativos:
-                            <ul>
-                                <li>FIABILIDAD</li>
-                                <li>SINCERIDAD</li>
-                                <li>CREDIBILIDAD</li>
-                                <li>INTEGRIDAD</li>
-                            </ul>
+                    </li>
+                    <li class="cards_item">
+                        <div class="card">
+                            @*<div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>*@
+                            <div class="card_content">
+                                <h2 class="card_title">Valores</h2>
+                                <hr />
+                                <p class="card_text">
+                                    El cumplimiento de nuestras metas estratégicas es resultado del apego a nuestros valores corporativos:
+                                    <ul class="card_text">
+                                        <li>FIABILIDAD</li>
+                                        <li>SINCERIDAD</li>
+                                        <li>CREDIBILIDAD</li>
+                                        <li>INTEGRIDAD</li>
+                                    </ul>
+                                </p>
+                                @*<button class="btn card_btn">Read More</button>*@
+                            </div>
                         </div>
-                    </div>
-                </div>
+                    </li>
+
+                    @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
+                    {
+                        <li class="cards_item">
+                            <div class="card">
+                                @*<div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>*@
+                                <div class="card_content">
+                                    <h2 class="card_title"><i class="fa-solid fa-users"></i> Solicitudes de Matriz de Requerimientos</h2>
+                                    <hr />
+                                    <p class="card_text">
+                                        Resumen de las solicitudes de Matriz de Requerimientos enviadas por RH (sin finalizar):
+                                    </p>
+
+                                    <table width="100%" style="font-size:17px">
+                                        <tr>
+                                            <th width="40%" nowrap>Pendientes Departamento:</th>
+                                            <th style="text-align:center">@ViewBag.PendientesDepto</th>
+                                        </tr>
+                                        <tr style="color:red">
+                                            <th width="1%" nowrap>Pendientes Propias:</th>
+                                            <th style="text-align:center">@ViewBag.totalPendientesPropias</th>
+                                        </tr>
+                                    </table>
+
+                                    <hr />
+                                    <div class="col-md-12">
+                                        <div class="col-md-6 offset-md-6">
+                                            <a href="@Url.Action("solicitudes_sistemas", "IT_matriz_requerimientos")" class="btn btn-primary btn-sm float-right" style="background-color: #009ff5; width:100%" title="Pendiente por departamento">
+                                                <i class="fa-solid fa-arrow-up-right-from-square"></i> Abrir
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    @*<button class="btn card_btn">Read More</button>*@
+                                </div>
+                            </div>
+                        </li>
+
+                    }
             </div>
+
 
             <!--#region Widgets Solicitudes GV -->
             <!-- SOLICIRUDES MATRIZ REQUERIMIENTOS -->
-            @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
-            {
-                <div class="col-md-4 col-sm-6">
-                    <div class="x_panel altura_200">
-                        <div class="x_title text-thyssen-color">
-                            <h2><i class="fa-solid fa-users"></i> Solicitudes de Matriz de Requerimientos</h2>
-                            <ul class="nav navbar-right panel_toolbox">
-                                @*Utilizado para mover a la derecha los iconos del card*@
-                                <span style="visibility:hidden">_______</span>
-                                <li>
-                                    <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                </li>
+            @*
+                                @if (User.IsInRole(TipoRoles.IT_MATRIZ_REQUERIMIENTOS_CERRAR))
+                                {
+                                    <div class="col-md-4 col-sm-6">
+                                        <div class="x_panel altura_200">
+                                            <div class="x_title text-thyssen-color">
+                                                <h2><i class="fa-solid fa-users"></i> Solicitudes de Matriz de Requerimientos</h2>
+                                                <ul class="nav navbar-right panel_toolbox">
+
+                            <span style="visibility:hidden">_______</span>
+                            <li>
+                                <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
 
                             </ul>
                             <div class="clearfix"></div>
@@ -140,12 +155,12 @@
                                             <i class="fa-solid fa-arrow-up-right-from-square"></i> Abrir
                                         </a>
                                     </div>
-                                </div>                                
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            }
+                            }*@
         </div>
     </div>
 </div>
